[package]
name = "debounced-button"
description = "Debounce a button and discriminate short vs. long presses"
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/debounced-button"
authors = ["Chris Maniewski"]
version = "0.4.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://git.sr.ht/~chmanie/debounced-button"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }

[dev-dependencies]
embedded-hal-mock = "0.8.0"
